--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=ecom_server
-spring.data.mongodb.uri=mongodb+srv://sdp:1234@sdp.i3jeezu.mongodb.net/?retryWrites=true&w=majority&appName=sdp
+spring.data.mongodb.uri=mongodb+srv://sdp:1234@sdp.i3jeezu.mongodb.net/ecom?retryWrites=true&w=majority
 spring.data.mongodb.database=ecom
-server.port=8080
+server.port=9090
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
